# robot-remote-control

./: README.md
VR/: CustomConfig.ini  PICO2.sln  PICO2.uproject  readme.txt
VR/Config/: DefaultEditorPerProjectUserSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
VR/Config/Android/: AndroidEngine.ini
VR/content/BasePlate/: BP_BasePlate.uasset
VR/content/Blueprint/: BP_ContinousMove.uasset  BP_GameInstance.uasset  BP_SaveGame.uasset  BP_Sky_Sphere_Child.uasset  BaseModelTransform.uasset  ControllerIndicator.uasset  GameModePICO.uasset  KeyStruct.uasset  SocketServer.uasset  TransformStruct.uasset
VR/content/Blueprint/Config/: BP_SaveConfig.uasset
VR/content/Blueprint/PlayerPawn/: BP_PawnParams.uasset  BP_PlayerPawnController.uasset
VR/content/Blueprint/VRPawn/: BP_VRAxisState.uasset  BP_VRMenu.uasset  BP_VRPawnBase.uasset  BP_VRPawnControllerBase.uasset  BP_VRRobotJointControl.uasset  MainCanvas_VR.uasset  SpawnUIElement.uasset  VR_HUD.uasset  (+1 more)
VR/content/Date/: DT_BasicKnowledge.uasset  DT_SceneApplication.uasset  DT_TeachingProgramming.uasset  Enum_GameState.uasset  US_Date.uasset
VR/content/Map/: PICO.umap  PICO_BuiltData.uasset
VR/content/Metrials/: Widget3DPassThrough_2.uasset
echo/: echo.py
robot/: b1_robot_controller2.py  t1_7dof_arm_ik2.py  t1_robot_controller2.py  vr_hand.py
ros_ws/src/: package.xml  setup.cfg  setup.py
ros_ws/src/booster_lerobot_bridge/: arm_bridge_node.py  hand_bridge_node.py  lerobot_recorder_node.py  sdk_paths.py  vr_router_node.py
ros_ws/src/launch/: bringup.launch.py
(+58 files in other folders)
