<?xml version="1.0"?>
<package format="3">
  <name>booster_lerobot_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 bridge between Booster SDK teleop/control scripts, RealSense topics, and LeRobot recording</description>

  <maintainer email="support@example.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>realsense2_camera_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
